--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <section id="blob-list">
         <div>
             <img src="#" />
-            <h2>Project Title #1</h2>
+            <h2>Odysey</h2>
             <p>
                 <span>Case study:</span>
                 This is a test caset tus; h ehj ejh a;ejh ;ejh ;oheohjeohje hoej he;hoeh e;o e;hje hoje heojhe
             </p>
-            <a href="/sites/odysey/index.html">View Site</a>
+            <a href="/odysey/index.html">View Site</a>
         </div>
         <div>
             <img src="#" />
@@ -71,7 +71,7 @@
                 <span>Case study:</span>
                 This is a test caset tus; h ehj ejh a;ejh ;ejh ;oheohjeohje hoej he;hoeh e;o e;hje hoje heojhe
             </p>
-            <a href="/sites/gringotts/index.html">View Site</a>
+            <a href="/gringotts/index.html">View Site</a>
         </div>
         <div>
             <img src="#" />
@@ -129,5 +129,8 @@
         </ul>
         <a href="#" class="contact">Contact Me!</a>
     </footer>
+    <script src='angular.min.js'></script>
+    <!--<script src='angular.js'></script>-->
+    
 </body>
 </html>
