quicklinks script change

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
+        <script>
+            //$('#quicklinks').click(function () {
+            //    $('#quicklinks ul').slideToggle('fast', function () { });
+
+            //});
+        </script>
         <nav>
             <ul>
                 <li><a href="#">Web Apps</a></li>
