--- a/sites/gringotts/index.html
+++ b/sites/gringotts/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 
-<html>
+<html ng-app="gringott">
   <head>
-    <link rel="stylesheet" type="text/css" href="home.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 	<title>Gringott Capital</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
 	<link href='https://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+     <script src="/angular.js"></script>
+    <script src="/angular-route.js"></script>
 	<script src="script.js"></script>
+      <!--<base href="/" />-->
   </head>
-  <body>
+  <body ng-controller="gringottCtrl">
      <div class="header">
-	   <div id="logo-box"><img src="logos/gringott-logo.png"> <span id="logo-text">Gringott</span></div>
+	   <div id="logo-box"><a href="index.html#/"><img src="logos/gringott-logo.png"> <span id="logo-text">Gringott</span></a></div>
 	   <div id="nav">
 	     <ul>
 		   <li><a href="">INITIATIVE</a></li>
@@ -23,76 +26,8 @@
 		 <div id="menu-button"><img src="logos/down-arrow.png"></div>
 	   </div>
 	 </div>
-	 <div class="img-panel">
-	   <img src="images/wikipedia_post_office.jpg">
-	   <div class="panel-text">
-		   <div id="hero-text">Trust is everything.</div>
-		   <div id="caption">Even when the going gets tough, we remain a bank for the people.</div>
-		   <div id="start-bttn"><a href="">START YOUR ACCOUNT</a></div>
-	   </div>
-	 </div>
-	 <div class="content-wrapper">
-	   <div class="icon-box-wrapper-1"> 
-	     <div class="icon-box-wrapper-content">
-			 <div class="icon-box">
-			   <div class="icon-pic"><img src="logos/school.png"></div>
-			   <div class="icon-blurb">
-				 <div class="icon-blurb-title">Institution</div>
-				 We’re a Swiss and internationally
-					 recognized bank.
-			   </div>
-			 </div>
-			 <div class="icon-box">
-			   <div class="icon-pic"><img src="logos/white-book.png"></div>
-			   <div class="icon-blurb">
-				 <div class="icon-blurb-title">By the Rules</div>
-				 We’re creative but we always make 
-					 the right choices.
-
-			   </div>
-			 </div>
-			 <div class="icon-box">
-			   <div class="icon-pic"><img src="logos/white-phone.png"></div>
-			   <div class="icon-blurb">
-				 <div class="icon-blurb-title">On the Go</div>
-				 Take us on the go. We’re on desktop,
-					tablet, and mobile.
-			   </div>
-			   </div>
-		 </div>
-	   </div>
-	   <div class="icon-box-wrapper-2">
-	     <div class="icon-box-wrapper-content">
-		    <div class="icon-box-wrapper-blurb"> 
-			  <span id="hero-smaller-text">Trust matters.</span>     Got questions? 
-			  Feel free to reach our customer service representative at <span id="phone">(323) 444-4344</span>
-			</div>
-			<div class="icon-box">
-			   <div class="icon-pic"><img src="logos/pencil.png"></div>
-			   <div class="icon-blurb">
-				 Our  employees go through rigorous background checks and hold a MI-7 
-					  banking license.
-			   </div>
-			 </div>
-			 <div class="icon-box">
-			   <div class="icon-pic"><img src="logos/people.png"></div>
-			   <div class="icon-blurb">
-				 We specialize in personal and business banking 
-			  services, family plans, credit loans, and 
-									   investments.
-			   </div>
-			 </div>
-			 <div class="icon-box">
-			   <div class="icon-pic"><img src="logos/lock.png"></div>
-			   <div class="icon-blurb">
-				  We invest in our people, our customers, 
-				and our security as an FDIC insured 
-									 institution.
-			   </div>
-			 </div>
-		 </div>
-	   </div>
-	 </div>
+      <div ng-view></div>
+	 
 	 <div class="footer">
 	   <div class="footer-links-wrapper">
 	     <div class="footer-link-div" id="link-div-1">
@@ -139,16 +74,17 @@
 	   <div class="mix-wrapper">
 	     <div class="notify-blurb">STAY UP TO DATE WITH GRINGOTT NOTIFICATIONS</div>
 		 <form>
-		   <input type="text" id="subscribe-email" value="Type in email here">
+		   <input type="text" id="subscribe-email" placeholder="Type in email here">
 		   <input type="submit" id="subscribe-bttn" value="SUBSCRIBE">
 		 </form>
 		 <div class="soc-med-wrapper">
-			 <div class="soc-med-box"><a href="#"><span id="twit">Tw</span></a></div>
-			 <div class="soc-med-box"><a href="#">f</a></div>
-			 <div class="soc-med-box"><a href="#">in</a></div>
+			 <div class="soc-med-box"><a href="https://www.twitter.com"><span id="twit">Tw</span></a></div>
+			 <div class="soc-med-box"><a href="https://www.facebook.com">f</a></div>
+			 <div class="soc-med-box"><a href="https://www.linkedIn.com">ln</a></div>
 		   </div>
 	   </div>
 	   <div class="copyright">Copyright @ Gringott Banks. All rights reserved.</div>
 	 </div>
   </body>
 </html>
+<script src="js/app.js"></script>
