added grocery app script + styles

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             </div>
             <div>
                 <img src="#" />
-                <h2>Project Title #1</h2>
+                <h2>Grocery #1</h2>
                 <p>
                     <span>Case study:</span>
                     This is a test caset tus; h ehj ejh a;ejh ;ejh ;oheohjeohje hoej he;hoeh e;o e;hje hoje heojhe
                 </p>
-                <a href="#">View Site</a>
+                <a href="/grocery/index.html">View Site</a>
             </div>
         </section>
         <section id="pagan-blocks">
