set viewport maxwidth for grocery app

--- a/sites/grocery/index.html
+++ b/sites/grocery/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Dynamic Grocery</title>
-    <script src="/angular.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
+	<script src="/angular.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <!--  <script src="script.js"></script>-->
       <link rel="stylesheet" href="style/styles.css" />
