--- a/sites/charts/index.html
+++ b/sites/charts/index.html
@@ -82,5 +82,5 @@
 </body>
 </html>
 
-<script src="js/chart.js"></script>
+<script src="js/Chart.js"></script>
 <script src="js/script.js"></script>
