editted grocery app

--- a/sites/grocery/index.html
+++ b/sites/grocery/index.html
@@ -16,7 +16,7 @@
         <div class="inner_content">
             <h1>Dynamic Grocery Shopping</h1>
             <br />
-            <form name="addIngred">
+            <form name="addIngred" novalidate>
                 <span>ADD: NAME: </span>
                 <input type="text" name="ingredN" ng-model="ingredN" required  />
                 <span>QUANT:</span> 
