created City by Flickr d3js web app

--- a/index.html
+++ b/index.html
@@ -45,6 +45,35 @@
 	   
 	</section>
 	<section class="section" data-anchor="sec" id="2">
+		<h1>CITY BY FLICKR</h1>
+		<div class="summ">
+			<p>Using data gathered from the flickr.GetHotList API + flickr.places.find API, I created a dynamic pie chart that displays Flickr stats for the 9
+			most visited cities in the world, pooling data counts from the top 100 tags for each major city.</p>
+
+			<p>The chart is implemented in D3JS, loads of AJAX + JSON reformatting.</p>
+		</div>
+		<div class="figure">
+			<div class="image_slider">
+				<ul class="slides">
+					<li >
+						<img src="flickr1.jpg" />
+					</li>
+					<li >
+						<img src="flickr2.jpg" />
+					</li>
+				</ul>
+			</div>
+		<div class="extra">
+			<p>Stack: D3JS, AJAX, jQuery, Javascript, HTML/LESS</p>
+
+			<p class="tags">Tags: Dynamic Chart Rendering, D3JS, Flickr API, JSON, Data, UI</p>
+		</div>
+		</div>
+		<a class="go" href="/city-by-flickr" target="_blank">
+			Visit Site
+		</a>
+	</section>
+	<section class="section" data-anchor="third" id="3">
 		<h1>POLAR CHART UI</h1>
 		<div class="summ">
 			<p>This one was super fun. I messed around with bar charts 
@@ -79,7 +108,7 @@
 			Visit Site
 		</a>
 	</section>
-	<section class="section" data-anchor="third" id="3">
+	<section class="section" data-anchor="fourth" id="4">
 		<h1>GROCERY</h1>
 		<div class="summ">
 			<p>A basic grocery calculator web app running off of 
@@ -112,7 +141,7 @@
 			Visit Site
 		</a>
 	</section>
-	<section class="section" data-anchor="four" id="4">
+	<section class="section" data-anchor="five" id="5">
 	   <h1>GRINGOTTS</h1>
 		<div class="summ">
 			<p>Gringotts is a fictional bank responsive design originally written in php.
@@ -140,7 +169,7 @@
 			Visit Site
 		</a>
 	</section>
-	<section class="section" data-anchor="five" id="5">
+	<section class="section" data-anchor="six" id="6">
 	   <h1>ODYSEY</h1>
 		<div class="summ">
 			<p>Still under construction. Random Parallax Site. Built to mimic the expansive feel astronauts get when they're floating inside their shuttle in space. </p>
