editted master template and city by flickr app

--- a/index.html
+++ b/index.html
@@ -77,10 +77,8 @@
 		<h1>POLAR CHART UI</h1>
 		<div class="summ">
 			<p>This one was super fun. I messed around with bar charts 
-			and line charts first before settling on building a simple 
-			Polar Chart UI using the base chart + legend initiation 
-			and "grab data" methods provided by the
-			Chart.js API. </p>
+			and line charts before settling on building a
+			Polar Chart UI using the base methods provided by the Chart.js API. </p>
 
 			<p>What I added: Random hex color generator, a way for 
 			users to dynamically delete or update data slices, and
