--- a/sites/city-by-flickr/index.html
+++ b/sites/city-by-flickr/index.html
@@ -36,7 +36,7 @@
 					<div class="box_content">
 						<p>July 20: Jakarta, Indonesia saw spikes for the tag "#Performance"</p>
 						<p>
-							The Icons performed live at Gandaria City from 7 - 9 pm.<br>
+							The Icons performed live at Gandaria City from 7 - 9 pm.<br><br>
 							Twitter: <a href="https://twitter.com/theiconsband">https://twitter.com/theiconsband</a><br>
 							<!-- Src: <a href="http://www.songkick.com/metro_areas/29154-indonesia-jakarta">http://www.songkick.com/metro_areas/29154-indonesia-jakarta</a> -->
 						</p>
@@ -51,7 +51,7 @@
 			<svg class="pie"></svg>
 		</section>
 		<div class="lightbox">
-			<h1 class="title">Date: <span></span></h1>
+			<h1 class="title">Date: <span></span>, 2015</h1>
 			<div class="inner_content"></div>
 			<span class="close">X</span>
 		</div>
